# calculadora_cientifica

./: README.md  calc_settings.json  main.py  pyproject.toml  requirements.txt  setup.py
backend/: parser.py
frontend/: gui.py
tests/: test_parser.py
