[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procalc-2025"
version = "2.0.0"
description = "Calculadora científica avanzada con interfaz gráfica moderna"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "César David Corrales Díaz", email = "cesarcorrales00@gmail.com"}
]
maintainers = [
    {name = "César David Corrales Díaz", email = "cesarcorrales00@gmail.com"}
]
keywords = ["calculator", "scientific", "math", "gui", "tkinter", "matplotlib"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
full = [
    "sympy>=1.13.0",
    "scipy>=1.12.0",
    "mpmath>=1.3.0",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "pyperclip>=1.8.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
procalc = "main:main"

[project.gui-scripts]
procalc-gui = "main:main"

[project.urls]
Homepage = "https://github.com/cesarcorrales17/calculadora_cientifica"
Repository = "https://github.com/cesarcorrales17/calculadora_cientifica"
Issues = "https://github.com/cesarcorrales17/calculadora_cientifica/issues"
Documentation = "https://github.com/cesarcorrales17/calculadora_cientifica#readme"

# Configuración de herramientas de desarrollo

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["backend", "frontend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"